infinite gif loaded

--- a/stylesheets/jquery.extendedprogressbar.css
+++ b/stylesheets/jquery.extendedprogressbar.css
@@ -92,7 +92,7 @@ body {
 }
 
 .infinite_bar{
-	background-image: url('../images/infinite_2.png');
+	background-image: url('../images/infinite.gif');
 	background-position: center;
 }
 
